--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "title": "Resume",
-  "name": "startbootstrap-resume",
-  "version": "4.0.0-beta.2",
-  "description": "Resume is a simple, yet elegant resume and CV theme for Bootstrap 4.",
+  "title": "Portfolio",
+  "name": "Portfolio",
+  "version": "1.0",
+  "description": "",
   "keywords": [
     "css",
     "sass",
@@ -11,19 +11,16 @@
     "theme",
     "template"
   ],
-  "homepage": "https://startbootstrap.com/template-overviews/resume",
+  "homepage": "https://tomasz-konecki.github.io/",
   "bugs": {
-    "url": "https://github.com/BlackrockDigital/startbootstrap-resume/issues",
-    "email": "feedback@startbootstrap.com"
+    "url": "https://github.com/tomasz-konecki",
+    "email": "tomasz.konecki.75@gmail.com"
   },
   "license": "MIT",
-  "author": "Start Bootstrap",
-  "contributors": [
-    "David Miller (http://davidmiller.io/)"
-  ],
+  "author": "TK",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-resume.git"
+    "url": "https://github.com/tomasz-konecki/tomasz-konecki.github.io"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
